--- a/style.css
+++ b/style.css
@@ -1,15 +1,29 @@
+div{
+    outline: 2px solid red;
+}
 #header-area{
     background-color: #1F2937;
     display: flex;
+    flex-direction: column;
+    flex: 2;
 }
 
 #links-to-info{
+    flex: 0.6;
     font-size: 18px;
     color: white;
+    text-align: right;
+    padding-right: 40px;
 }
 
-#main-text{
+#main-text-area{
     color: white;
-    margin-top: 100px;
-    margin-left: -230px;
+    padding-left: 24px;
+    display: flex;
+    flex-direction: row;
+}
+
+#website-descp{
+    font-size: 14px;
+    justify-content: end;
 }
