--- a/style.css
+++ b/style.css
@@ -21,9 +21,24 @@ div{
     padding-left: 24px;
     display: flex;
     flex-direction: row;
+    padding-bottom: 100px;
 }
 
 #website-descp{
     font-size: 14px;
     justify-content: end;
+}
+
+#some-info{
+    padding-top: 50px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.some-info-item{
+    display: flex;
+    flex-direction: row;
+    padding-left: 10px;
+    padding-right: 10px;
 }
